tests/ui/extends_several.stderr
error: unexpected token
 --> tests/ui/extends_several.rs:3:19
  |
3 |     #[extends(foo bar)]
  |                   ^^^
