tests/ui/extends_several.rs
#[angstropass::langs]
mod langs {
    #[extends(foo bar)]
    mod baz {}
}

fn main() {}
